# rhm

./: .clang-format  CMakeLists.txt  README.md
components/: CMakeLists.txt
components/helpers/: helper_functions.hpp
example/: CMakeLists.txt  csv_reader.cpp  csv_reader.hpp  ellipse.hpp  main_example.cpp  matplotlibcpp.hpp  simulation_example.cpp  trajectory_generation.cpp  trajectory_generation.hpp
include/: helper_functions.hpp  measurement.hpp  object_state.hpp  rhm.hpp  rhm_calibrations.hpp  rhm_ellipse.hpp  rhm_star_convex.hpp
tests/: CMakeLists.txt  mem_ekf_tests.cpp  model_cv.hpp  rhm_star_convex_tests.cpp
